...
    <string name="update_error_file">安装包已失效，请重新检查更新并下载</string>
    <string name="update_error_download_export">无法保存到 Download。请检查存储空间，Android 9 及以下还需文件访问权限。原安装包仍在应用缓存中。</string>
    <string name="app_name">Kaloscope</string>
    <string name="tv_experience">TV EXPERIENCE</string>
    <string name="setup_title">添加服务器</string>
    <string name="setup_description">添加 Kaloscope 服务器，连接信息仅保存在本机</string>
    <string name="setup_step_server">配置服务器</string>
    <string name="setup_step_login">登录账户</string>
    <string name="setup_form_title">连接服务器</string>
    <string name="server_name">服务器名称</string>
    <string name="server_name_hint">例如：家庭服务器</string>
    <string name="server_url">服务器地址</string>
    <string name="server_url_hint">例如：192.168.1.2:8000</string>
    <string name="server_scheme_http">http://</string>
    <string name="server_scheme_https">https://</string>
    <string name="server_scheme_description">协议：%1$s，按确认键切换</string>
    <string name="test_connection">测试连接</string>
    <string name="testing">测试中…</string>
    <string name="save_continue">保存并继续</string>
    <string name="saving">保存中…</string>
    <string name="connection_success">连接成功  v%1$s</string>
    <string name="saved_servers">已保存服务器</string>
    <string name="add_another_server">添加服务器</string>
    <string name="delete_server_description">删除服务器：%1$s</string>
    <string name="delete_server_title">删除服务器？</string>
    <string name="delete_server_message">从本机删除“%1$s”及其登录信息</string>
...
